--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import 'tailwindcss';
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:wght@100..800&display=swap');
 
 @custom-variant dark (&:is(.dark *));
 
@@ -10,6 +11,7 @@
   --color-pad-empty-bg: #1e1e1e;
 
   --font-sans: Inter, sans-serif;
+  --font-mono: "JetBrains Mono", monospace;
 
   --shadow-pad-raised:
     inset 0 1px 1px rgba(255, 255, 255, 0.15), 0 2px 3px rgba(0, 0, 0, 0.4),
@@ -32,6 +34,7 @@
   color utility to any element that depends on these defaults.
 */
 @layer base {
+
   *,
   ::after,
   ::before,
